# taz-echtzeitanalyse

./: .flake8  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  build.py  manage.py  pyproject.toml  requirements.txt  tmuxp.yml
.gitlab/: auto-deploy-values.yaml
frontend/: views.py
frontend/static/: .gitignore
frontend/static_src/: .editorconfig  README.md  nightwatch.json  package-lock.json  package.json  vue.config.js
frontend/static_src/src/: main.ts
frontend/static_src/src/components/: Ticker.vue
frontend/static_src/src/router/: index.ts
frontend/static_src/src/style/: _bootstrap.scss  _variables.scss
frontend/static_src/src/views/: Dashboard.vue
frontend/templates/frontend/: .gitignore
tazboard/: settings.py  urls.py  wsgi.py
tazboard/api/: apps.py  elastic_client.py  errors.py  filters.py  query_params.py  schema.py  serializers.py  transformers.py  urls.py  views.py
tazboard/api/management/commands/: create_mocks.py
tazboard/api/queries/: common.py  constants.py  devices.py  fireplace.py  histogram.py  referrer.py  subjects.py  toplist.py  total.py
tazboard/api/templates/api/: redoc.html
tazboard/api/tests/: __init__.py  common.py  fireplace.py  histogram.py  referrer.py  subjects.py  toplist.py  total.py
tazboard/api/tests/mocks/: article_today_histogram.json  c.xml  get_devices_query-sample.json  get_fireplace_query-sample.json  get_histogram_query-sample.json  get_referrer_query-sample.json  get_subjects_query-sample.json  get_toplist_msids_query-sample.json  get_toplist_query-sample.json  get_total_query-sample.json
tazboard/api/utils/: datetime.py  list.py  metadata.py  msearch_queries.py
tazboard/core/: asgi.py  urls.py  wsgi.py
tazboard/core/settings/: base.py  docker.py  docker_mocked.py  test.py
tazboard/frontend/: apps.py  urls.py
tazboard/frontend/static_src/: .eslintrc.js  .gitignore  jest.config.js  nightwatch.config.js  package-lock.json  package.json  vue.config.js
tazboard/frontend/static_src/src/: App.vue  main.ts
tazboard/frontend/static_src/src/client/: ApiClient.ts
tazboard/frontend/static_src/src/common/: ConnectionAlertBus.ts  GlobalPulse.ts  LoadingState.ts  SelectReferrerMixin.ts  colors.ts  constants.ts  timeframe.ts  utils.ts
tazboard/frontend/static_src/src/components/: ArticleRowDetail.ts  (+17 more)
tazboard/settings/: base.py
(+49 files in other folders)
