[tool.poetry]
name = "taz-dashboard"
version = "0.0.1"
description = "An internal application for monitoring and management of the taz website"
authors = ["Lyudmila Vaseva <lyudmila@ctrl.alt.coop>",
           "Jonatan Zint <jonatan@ctrl.alt.coop>" ]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest-django = "^3.9.0"
ipdb = "^0.13.2"
pylint = "^2.4.4"
coverage = "^5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
